--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,7 +7,6 @@
     height: 210px;
     background-color: black;
     padding-bottom: 25px;
-    border-radius: 25px 25px 0 0;
 }
 
 .kasaLogoFooter {
